// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Dropdown DropdownMultiselect 1`] = `
.c0 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  position: relative;
  height: 200px;
}

.c1 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  position: relative;
}

.c2 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  line-height: inherit;
  font-family: Nunito Sans;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  outline: none;
  border: 0;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  white-space: nowrap;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  font-weight: bold;
  border-radius: 12px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  text-overflow: ellipsis;
  font-family: Nunito Sans;
  overflow: hidden;
  white-space: nowrap;
  text-align: start;
  font-size: 14px;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
}

@media screen and (min-width:40em) {

}

<div
  className="c0"
>
  <div
    className="c1"
  >
    <button
      className="c2"
      onClick={[Function]}
    >
      <span />
      <span
        className="icon-dropdown"
        style={
          Object {
            "fontSize": "12px",
            "height": "12px",
            "position": "absolute",
            "right": "12px",
            "transform": "rotate(0deg)",
          }
        }
      />
    </button>
  </div>
</div>
`;

exports[`Dropdown DropdownMultiselect 2`] = `
.c0 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  position: relative;
  height: 200px;
}

.c1 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  position: relative;
}

.c2 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  line-height: inherit;
  font-family: Nunito Sans;
  font-weight: 400;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  outline: none;
  border: 0;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  white-space: nowrap;
  position: relative;
}

.c3 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  position: relative;
  width: 14px;
  height: 14px;
}

@media screen and (min-width:40em) {

}

<div
  className="c0"
>
  <div
    className="c1"
  >
    <button
      className="c2"
      onClick={[Function]}
    >
      <div
        className="c3"
      >
        <span
          className="icon-configuracion"
          style={
            Object {
              "bottom": "0px",
              "fontSize": 14,
              "height": 14,
              "left": "-0.5px",
              "position": "absolute",
              "right": "0px",
              "top": "-1px",
              "width": 14,
            }
          }
        />
      </div>
    </button>
  </div>
</div>
`;

exports[`Dropdown DropdownMultiselect 3`] = `
.c0 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  position: relative;
  height: 200px;
}

<div
  className="c0"
/>
`;

exports[`Dropdown DropdownText 1`] = `
.c0 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  position: relative;
  height: 200px;
}

<div
  className="c0"
/>
`;

exports[`Dropdown default 1`] = `ShallowWrapper {}`;
